# ComputationalGeometry

./: .gitmodules  ComputationalGeometry.7z  PS4.7z
Problem Set1/: PS1.docx
Problem Set1/ConvexHull/: CMakeLists.txt  main.cpp
Problem Set2/: PS2.docx
Problem Set3/: 625.727_Riggs.docx
Project/Triangulation/: CMakeLists.txt  Readme.md  delaunay.cpp  delaunay.h  face.cpp  face.h  main.cpp  quadedge.cpp  quadedge.h  testgtest.cpp  vertex.cpp  vertex.h
Project/Triangulation/test/: genTest100K.csv  genTest10K.csv  test.csv
